--- a/app/views/ftf/_includes/body-content_accept-agreement-main-block.html
+++ b/app/views/ftf/_includes/body-content_accept-agreement-main-block.html
@@ -1,3 +1,6 @@
+
+{% if data['progress'] == "submitted" %}
+{% else %}
 <p class="govuk-body-l">Confirm you accept the grant funding agreement and its terms and conditions.</p>
 
 <p class="govuk-body">I confirm that:</p>
@@ -7,3 +10,6 @@
   <li>I understand the grant funding is conditional based on the terms and conditions.</li>
   <li>I understand the information in and my acceptance of the grant funding agreement will be kept on file and checked against each claim for eligible project costs I submit.</li>
 </ul>
+
+
+{% endif %}
