--- a/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
+++ b/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
@@ -12,7 +12,6 @@
 </ul>
 
 <p class="govuk-body">Your agreement remains active for 5 years after your final claim is paid and there could be a site visit at any point during that time. If you make changes that have not been approved by us, we could end your agreement and reclaim any grant we have already paid.</p>
-<p class="govuk-body">There may be times when we wish to use examples of projects in our publicity. If you do not want your project to be used for publicity purposes such as case studies or ministerial visits, please contact us.</p>
 </span>
 
 <span class="content-section">
@@ -26,5 +25,5 @@
 
 <span class="content-section">
 <h2 class="govuk-heading-m">Withdrawing your agreement</h2>
-<p class="govuk-body">If you do not want the grant funding, you can <a href="">withdraw your application</a> before you make a claim.</p>
+<p class="govuk-body">If you no longer want the grant funding, you can <a href="">withdraw your application</a> before you make a claim.</p>
 </span>
