--- a/app/views/ftf/_includes/body-content_application-outcome-unsuccessful.html
+++ b/app/views/ftf/_includes/body-content_application-outcome-unsuccessful.html
@@ -1,9 +1,9 @@
 <span class="content-section">
-<p class="govuk-body">Unfortunately your project did not score as highly as others so you will not receive grant funding.</p>
-<p class="govuk-body">Your project unfortunately did not have planning permission and abstraction license in place by the deadline.</p>
+<p class="govuk-body">Unfortunately your application was not successful so you will not receive grant funding.</p>
+<p class="govuk-body">Your application was unsuccessful because your project did not have planning permission and abstraction licence in place by the deadline.</p>
 </span>
 
 <span class="content-section">
-<h2 class="govuk-heading-m">If you disagree</h2>
-<p class="govuk-body">If you disagree with this decision, you can contact the RPA with details to support your case. We will then review our decision.</p>
+<h2 class="govuk-heading-m">If you disagree with the outcome</h2>
+<p class="govuk-body">If you disagree with this outcome, you can contact the RPA with details to support your case.</p>
 </span>
