--- a/app/views/ftf/_includes/body-content_eoi-outcome-accepted.html
+++ b/app/views/ftf/_includes/body-content_eoi-outcome-accepted.html
@@ -10,6 +10,9 @@
 
   <h2 class="govuk-heading-m">What you need to do</h2>
 
+  <p class="govuk-body"><a href="activity1">Download the Word application form and Excel appendix</a></p>
+
+
 <p class="govuk-body">Before you fill in the full application, you need to check what evidence you must provide in the <a href="/_common/not-testing.html" target="_blank">Water Management grant manual (opens in a new tab)</a>.</p>
 
 <p class="govuk-body">Evidence will include:</p>
@@ -27,13 +30,23 @@
 </ul>
 
 <p class="govuk-body">You should also read <a target="_blank" href="/_common/not-testing.html">How to submit a Water Management grant full application (opens in a new tab)</a>.</p>
-<p class="govuk-body"><a href="activity1">Download the Word application form and Excel appendix</a></p>
-<p class="govuk-body">When you are ready to submit your application, <a target="_blank" href="/_common/not-testing.html">upload your application forms and evidence </a> and submit your application.</p>
+<p class="govuk-body">When you are ready to submit your application, <a target="_blank" href="/_common/not-testing.html">upload your application forms and evidence </a>.</p>
 
-
+<!-- CHANGING THE WARNING COMPONENT TO MATCH GOV UK DESIGN SYSTEM
 <div class="govuk-inset-text">
   <strong>Warning:</strong> Do not upload handwritten and scanned copies or PDFs of these forms.
 </div>
+-->
+
+
+<div class="govuk-warning-text">
+  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+  <strong class="govuk-warning-text__text">
+    <span class="govuk-visually-hidden">Warning</span>
+    Do not upload handwritten and scanned copies or PDFs of these forms.
+  </strong>
+</div>
+
 
 </span>
 
@@ -47,5 +60,7 @@
   <ul class="govuk-list govuk-list--bullet">
     <li>get quotes from suppliers</li>
     <li>apply for planning permission or any other licences or permissions required</li>
+    <li>check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a></li>
+    <li>read <a href="/_common/not-testing.html">How to submit a Water Management grant full application (opens in a new tab)</a></li>
   </ul>
 </span>
