--- a/app/views/ftf/agreement/v2-0/email-agreement-accepted2.html
+++ b/app/views/ftf/agreement/v2-0/email-agreement-accepted2.html
@@ -124,15 +124,18 @@
  
 
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Reminder: Submit your Water Management grant claim<br><br>
+
+
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Received: Water Management grant agreement.<br><br>
 
           <script>
             function navigateToPage() {
-              // Replace 'page2.html' with the actual file or URL for page 2
-              window.location.href = 'email.html';
+              window.location.href = 'email-agreement-accepted';
             }
           </script>
-                    <strong>Business name:</strong> Imaginary Farms Ltd<br>
+          
+
+          <strong>Business name:</strong> Imaginary Farms Ltd<br>
           <strong>Grant:</strong> Water Management Grant - Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
@@ -140,11 +143,26 @@
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
-              
-              <strong>Reminder:</strong>
-              
-            
-              Your Water Management grant claim is due by 11:59pm on <strong>31 May 2025</strong>.<br>
+                          
+              You have accepted your grant funding agreement and so now can start your project.<br><br>
+
+
+              You should read <a href="/_common/not-testing.html">Managing a successful Farming Transformation Fund project</a> on Welcome to GOV.UK.<br>
+              It explains the steps you must follow to comply with the funding rules for your grant.<br><br>
+
+              Download copies of your agreement documents:<br>
+
+              <li><a href="/_common/not-testing.html">Your grant funding agreement, including Annexes A to C</a></li>
+              <li><a href="/_common/not-testing.html">FTF terms and conditions</a></li>
+
+              <br>
+              Your first claim window is now open. To submit a claim, you must <a href="/_common/not-testing.html">download a claim form</a>.
+
+
+
+
+
+
             </p>
 
 						
@@ -152,27 +170,29 @@
 
 
 
-            <strong>What you need to do</strong><br><br>
 
-            <a href="activity1?04-01=ready">Download claim form</a><br>
+            <strong>Changes to your agreement</strong><br><br>
 
-            <br>
+            If you need to make a change to your project from what is set out in your grant funding agreement, you must get approval from the RPA before you make the change.<br><br>
 
-            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
+            Examples of changes to your project include changes to:<br><br>
 
-            You need evidence that each item you are claiming for:<br><br>
-
-              <li>has been purchased (for example, invoices)</li>
-              <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
-              <li>is in place and operational (for example, photos, videos)</li>
+   
+              <li>supplier</li>
+              <li>your business such as status or ownership</li>
+              <li>our grant-funded items such as ownership, usage or any deviation from your agreed project</li>
+              <li>project timescales such as claim submission or completion dates</li>
+              <li>project outputs</li>
+              <li>funding</li>
+             
+              <br>
+                        
+              Your agreement remains active for 5 years after your final claim is paid and there could be a site visit at any point during that time. <br>
+              If you make changes that have not been approved by us, we could end your agreement and reclaim any grant we have already paid.
 
               <br>
-                                     
-              When you are ready to submit your claim, <a href="activity2">upload your claim form and evidence</a> and submit your claim.<br><br>
 
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
-
-
+             
 
            <hr style="margin: 30px 0;">
 
@@ -180,10 +200,18 @@
 
 
 
+
+
+
+
+
+
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your claim</strong><br><br>
-              If you have any questions about your claim or you cannot make the claim date, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              <strong>Questions about your agreement</strong><br><br>
+              
+              If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
@@ -192,10 +220,24 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
             </div> 
   
-           <br>
+           <hr style="margin: 30px 0;">
+
+
+           <div class="govuk-details__text">
+            <strong>Withdrawing your agreement</strong><br><br>
+            
+            If you no longer want the grant funding, you can <a href="/_common/not-testing.html">withdraw your application</a> before you make a claim.<br>
+            
+
+
+
+
+<br><br>
+
+
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
 						
