--- a/app/views/ftf/application/v3-0/confirmation.html
+++ b/app/views/ftf/application/v3-0/confirmation.html
@@ -93,7 +93,7 @@
           <h2 class="govuk-heading-m">Withdrawing your application</h2>
 
 
-          <p class="govuk-body">If you do not want the grant funding, you can <a href="/_common/not-testing.html">withdraw your application</a> before you make a claim.</p>
+          <p class="govuk-body">If you no longer want the grand funding, you can <a href="/_common/not-testing.html">withdraw your application</a> before you make a claim.</p>
 
           <br>
 
