--- a/app/views/ftf/application/v3-0/outcome-successful.html
+++ b/app/views/ftf/application/v3-0/outcome-successful.html
@@ -33,7 +33,7 @@ Accept grant funding agreement
 
 
         <span class="content-section">
-          <h2 class="govuk-heading-m">Withdrawing your agreement</h2>
+          <h2 class="govuk-heading-m">If you do not want to accept your agreement</h2>
           <p class="govuk-body">If you do not want to accept your agreement, you should <a href="#">withdraw your application</a>.</p>
         </span>
 
