--- a/app/views/ftf/claim/v3-0/email-claim-submitted3.html
+++ b/app/views/ftf/claim/v3-0/email-claim-submitted3.html
@@ -124,15 +124,19 @@
  
 
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Reminder: Submit your Water Management grant claim<br><br>
+
+
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Water Management grant claim: reference number HDJ2123F<br><br>
 
           <script>
             function navigateToPage() {
               // Replace 'page2.html' with the actual file or URL for page 2
-              window.location.href = 'email.html';
+              window.location.href = 'email-claim-submitted';
             }
           </script>
-                    <strong>Business name:</strong> Imaginary Farms Ltd<br>
+          
+
+          <strong>Business name:</strong> Imaginary Farms Ltd<br>
           <strong>Grant:</strong> Water Management Grant - Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
@@ -140,50 +144,24 @@
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
-              
-              <strong>Reminder:</strong>
-              
+                          
+              <strong>First claim submitted:</strong> reference number <strong>HDJ2123F</strong>.<br><br>
             
-              Your Water Management grant claim is due by 11:59pm on <strong>31 May 2025</strong>.<br>
+              We have received your claim.<br><br>
+              We will assess your claim and let you know if we need any further information.<br><br>
+              We aim to process claims within 30 working days.<br><br>
+              You will get a notification when your claim is approved and paid.<br>
             </p>
 
 						
             <hr style="margin: 30px 0;">
 
-
-
-            <strong>What you need to do</strong><br><br>
-
-            <a href="activity1?04-01=ready">Download claim form</a><br>
-
-            <br>
-
-            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
-
-            You need evidence that each item you are claiming for:<br><br>
-
-              <li>has been purchased (for example, invoices)</li>
-              <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
-              <li>is in place and operational (for example, photos, videos)</li>
-
-              <br>
-                                     
-              When you are ready to submit your claim, <a href="activity2">upload your claim form and evidence</a> and submit your claim.<br><br>
-
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
-
-
-
-           <hr style="margin: 30px 0;">
-
-
-
-
-
        
             <div class="govuk-details__text">
               <strong>If you have questions about your claim</strong><br><br>
               If you have any questions about your claim or you cannot make the claim date, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+
+
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
