--- a/app/views/ftf/claim/v3-0/email.html
+++ b/app/views/ftf/claim/v3-0/email.html
@@ -157,7 +157,11 @@
 
             <strong>What you need to do</strong><br><br>
 
-            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a>.<br><br>
+            <a href="activity1?04-01=ready">Download claim form</a><br>
+
+            <br>
+
+            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
 
             You need evidence that each item you are claiming for:<br><br>
 
@@ -165,12 +169,8 @@
               <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
               <li>is in place and operational (for example, photos, videos)</li>
 
-              <br><br>
-
-              <a href="/_common/not-testing.html">Download claim form</a>
-
-              <br><br>
-                        
+              <br>
+                                     
               When you are ready to submit your claim, <a href="activity2">upload your claim form and evidence</a> and submit your claim.<br><br>
 
             <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
@@ -185,12 +185,15 @@
 
        
             <div class="govuk-details__text">
-              <p class="govuk-body">If you cannot submit your claim by this date, please contact the RPA.</p>
+              <strong>If you have questions about your claim</strong><br><br>
+              If you have any questions about your claim or you cannot make the claim date, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+
+
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
                 Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-                <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+                <a href="/_common/not-testing.html">Find out about call charges</a>
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
