--- a/app/views/ftf/eoi/v2-0/check.html
+++ b/app/views/ftf/eoi/v2-0/check.html
@@ -24,7 +24,6 @@
   <div class="govuk-grid-column-two-thirds">
 
 <h2 class="govuk-heading-l">Check your details</h2>
-<p class="govuk-body">Changes in this section will update your Rural Payments Service account.</p>
     
 <br>
 
@@ -40,7 +39,7 @@
 
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Project details</h2>
-    <a href="/_common/not-testing.html" style="margin-left: auto;">Change (opens in a new tab)</a>
+    <a href="/_common/not-testing.html" style="margin-left: auto;">Change</a>
   </div>
   
 </dl>
@@ -70,7 +69,8 @@
 
 
 <br><br>
-
+<p class="govuk-body">Changes to the following sections will update your Rural Payments Service account.</p>
+<br>
 
 <dl class="govuk-summary-list">
 
