--- a/app/views/ftf/eoi/v2-0/confirmation.html
+++ b/app/views/ftf/eoi/v2-0/confirmation.html
@@ -53,11 +53,12 @@
 
        <h2 class="govuk-heading-m">What happens next</h2>
 
-       <ol class="govuk-list govuk-list--number">
-        <li>RPA will be in touch by <strong>24 February 2024</strong>. They will tell you if your project scored well enough to get the full application form.</li>
-        <li>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</li>
-        <li>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</li>
-      </ol>
+       <p class="govuk-body"> 
+        The RPA will be in touch by <strong>24 February 2024</strong>.<br>
+        They will tell you if your project scored well enough to get the full application form.<br><br>
+        If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.<br><br>
+        If your application is successful, you’ll be sent a funding agreement and can begin work on the project.
+       </p>
 
     
 
