--- a/app/views/ftf/eoi/v2-0/email.html
+++ b/app/views/ftf/eoi/v2-0/email.html
@@ -140,7 +140,10 @@
               Thank you for registering your interest in the Water Management grant.<br>
             </p>
 
-						
+            <hr style="margin: 30px 0;">
+
+
+
             <strong>What happens next</strong><br><br>
 
             The RPA will be in touch by <strong>24 February 2024</strong>. They will tell you if your project scored well enough to get the full application form.<br><br>
@@ -159,23 +162,23 @@
               <ul class="govuk-list govuk-list--bullet">
                 <li>get quotes from suppliers</li>
                 <li>apply for planning permission or any other licences or permissions required</li>
-                <li>check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a></li>
-                <li> read <a href="/_common/not-testing.html">How to submit a Water Management grant full application (opens in a new tab)</a></li>
+                <li>check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a></li>
+                <li> read <a href="/_common/not-testing.html">How to submit a Water Management grant full application</a></li>
               </ul>
             </p>
         
            <hr style="margin: 30px 0;">
        
             <div class="govuk-details__text">
-              <strong>If you have questions</strong><br><br>
+              <strong>If you have questions about your expression of interest</strong><br><br>
               
-              If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              If you have questions about your expression of interest, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
                 Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-                <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+                <a href="/_common/not-testing.html">Find out about call charges</a>
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
