--- a/app/views/ftf/_includes/body-content_terms-and-conditions-main-block.html
+++ b/app/views/ftf/_includes/body-content_terms-and-conditions-main-block.html
@@ -1,4 +1,7 @@
 <p class="govuk-body-l">Your grant funding agreement is bound by our general terms and conditions for all Farming Transformation Fund (FTF) grants.</p>
 
+{% if (data['progress'] == "submitted") %}{% else %}
 <p class="govuk-body">To accept this agreement you must have read and agreed to these terms and conditions.</p>
+{% endif %}
+
 <p class="govuk-body">Read the full <a href="https://www.gov.uk/government/publications/farming-equipment-and-technology-fund-fetf-2023/annex-2-terms-and-conditions" target="_blank"> terms and conditions (opens in new tab)</a></p>
