--- a/app/views/ftf/_includes/details-block_request-accessible-format.html
+++ b/app/views/ftf/_includes/details-block_request-accessible-format.html
@@ -7,7 +7,9 @@
           <div class="govuk-details__text">
             <p class="govuk-body">This form may not be suitable for users of assistive technology.</p>
             <p class="govuk-body">If you use assistive technology (such as a screen reader) and need a version of this document in a more accessible format, please contact the RPA.</p>
-            <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)</p>
+            <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)<br>
+              <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+              </p>      
             <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
           </div>
         </details>
