--- a/app/views/ftf/agreement/v2-0/accepted-terms-and-conditions.html
+++ b/app/views/ftf/agreement/v2-0/accepted-terms-and-conditions.html
@@ -15,23 +15,26 @@ Accept grant funding agreement
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <form method="post" action="agreement-detail">
+        <form method="post" action="accept-grant-funding-agreement">
 
 
-        <span class="govuk-caption-xl">Browns Hill Farm reservoir (WM-VMA-1234)</span>
-        <h1 class="govuk-heading-xl">Expression of interest outcome</h1>
+        <span class="govuk-caption-xl">Sign agreement</span>
+        <h1 class="govuk-heading-xl">Terms and conditions accepted</h1>
 
-        {% include "../../_includes/body-content_eoi-outcome-accepted.html" %}
+        {% include "../../_includes/body-content_terms-and-conditions-main-block.html" %}
 
+
+<br><br>
+
+          {{govukButton({
+              text: "Continue"
+          })}}
         
+ 
+
         </form>
 
 
-       
-
-        {% include "../../_includes/details-block_outcome-questions-contact.html" %}
-      
-      
       </div>
       <div class="govuk-grid-column-one-third">
         <!-- SIDE COLUMN BLOCK -->
