--- a/app/views/ftf/agreement/v2-0/index2.html
+++ b/app/views/ftf/agreement/v2-0/index2.html
@@ -167,7 +167,7 @@
 
               <br><br><br>
 
-              <strong>Withdrawing your application</strong><br><br>
+              <strong>If you do not want to accept your agreement</strong><br><br>
 
               If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.<br>
 
@@ -186,7 +186,7 @@
 
        
             <div class="govuk-details__text">
-              <strong>Questions about your agreement</strong><br><br>
+              <strong>If you have questions about your agreement</strong><br><br>
               
               If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
@@ -194,7 +194,7 @@
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
                 Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-                <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+                <a href="/_common/not-testing.html">Find out about call charges</a>
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
