--- a/app/views/ftf/application/v3-0/email3.html
+++ b/app/views/ftf/application/v3-0/email3.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> We have received your Water Management grant application<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Received: Water Management grant application<br><br>
 
           <script>
             function navigateToPage() {
