--- a/app/views/ftf/application/v3-0/financial/financial2b.html
+++ b/app/views/ftf/application/v3-0/financial/financial2b.html
@@ -83,7 +83,7 @@
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
+        <span class="govuk-warning-text__assistive"></span>
         Do not password protect files.
       </strong>
     </div>
