--- a/app/views/ftf/application/v3-0/financial/financial3a.html
+++ b/app/views/ftf/application/v3-0/financial/financial3a.html
@@ -36,11 +36,13 @@
 
 
 
-    <p class="govuk-body">The accounts must include:<br>
+    <p class="govuk-body">You must upload all pages, including:<br>
       <ul class="govuk-list govuk-list--bullet">
-        <li>business turnover</li>
-        <li>balance sheet total (the total of all assets)</li>
-        <li>the financial year end date</li>
+        <li>title page</li>
+        <li>introduction pages</li>
+        <li>profit and loss</li>
+        <li>balance sheet</li>
+        <li>all notes pages</li>
       </ul>
     </p>
 
@@ -59,7 +61,7 @@
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
+        <span class="govuk-warning-text__assistive"></span>
         Do not password protect files.
       </strong>
     </div>
