--- a/app/views/ftf/application/v3-0/financial/financialq.html
+++ b/app/views/ftf/application/v3-0/financial/financialq.html
@@ -41,11 +41,13 @@
 
     <br>
 
-    <p class="govuk-body">The accounts must include:<br>
+    <p class="govuk-body">You must upload all pages, including:<br>
       <ul class="govuk-list govuk-list--bullet">
-        <li>business turnover</li>
-        <li>balance sheet total (the total of all assets)</li>
-        <li>the financial year end date</li>
+        <li>title page</li>
+        <li>introduction pages</li>
+        <li>profit and loss</li>
+        <li>balance sheet</li>
+        <li>all notes pages</li>
       </ul>
     </p>
     <br>
