--- a/app/views/ftf/application/v3-0/index.html
+++ b/app/views/ftf/application/v3-0/index.html
@@ -164,7 +164,13 @@
 
             <strong>What you need to do</strong><br><br>
 
-            Before you fill in the full application, you need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a>.<br><br>
+
+            <a href="activity1?02-01=ready">Download the Word application form and Excel appendix</a>
+
+            <br><br>
+
+
+            Before you fill in the full application, you need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
 
             Evidence will include:<br><br>
 
@@ -180,13 +186,9 @@
 
               <br>
 
-              You should also read <a href="/_common/not-testing.html">How to submit a Water Management grant full application (opens in a new tab)</a>.<br>
+              You should also read <a href="/_common/not-testing.html">How to submit a Water Management grant full application</a>.<br>
 
               <br>
-
-              <a href="activity1?02-01=ready">Download the Word application form and Excel appendix</a>
-
-              <br><br>
                         
               When you are ready to submit your application, <a href="/_common/not-testing.html">upload your application forms and evidence </a> and submit your application.<br><br>
 
@@ -230,7 +232,7 @@
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
                 Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-                <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+                <a href="/_common/not-testing.html">Find out about call charges</a>
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
