--- a/app/views/ftf/eoi/v2-0/email_eoi-outcome-not-accepted.html
+++ b/app/views/ftf/eoi/v2-0/email_eoi-outcome-not-accepted.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
+  <title>We have received your Water Management grant EOI</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -124,15 +124,18 @@
  
 
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Reminder: Submit your Water Management grant claim<br><br>
+
+
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Unsuccessful: Water Management grant EOI<br><br>
 
           <script>
             function navigateToPage() {
-              // Replace 'page2.html' with the actual file or URL for page 2
-              window.location.href = 'email.html';
+              window.location.href = 'index2.html';
             }
           </script>
-                    <strong>Business name:</strong> Imaginary Farms Ltd<br>
+          
+
+          <strong>Business name:</strong> Imaginary Farms Ltd<br>
           <strong>Grant:</strong> Water Management Grant - Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
@@ -140,50 +143,25 @@
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
-              
-              <strong>Reminder:</strong>
-              
-            
-              Your Water Management grant claim is due by 11:59pm on <strong>31 May 2025</strong>.<br>
+                          
+              Unfortunately your Water Management grant expression of interest was not accepted.<br><br>
+              This is because your project did not score highly enough to be invited to submit a full application.<br><br>
+              The Farming Transformation Fund (FTF) scheme is competitive and not all eligible applications can be offered grant funding.
+
+
             </p>
 
 						
-            <hr style="margin: 30px 0;">
-
-
-
-            <strong>What you need to do</strong><br><br>
-
-            <a href="activity1?04-01=ready">Download claim form</a><br>
-
-            <br>
-
-            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
-
-            You need evidence that each item you are claiming for:<br><br>
-
-              <li>has been purchased (for example, invoices)</li>
-              <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
-              <li>is in place and operational (for example, photos, videos)</li>
-
-              <br>
-                                     
-              When you are ready to submit your claim, <a href="activity2">upload your claim form and evidence</a> and submit your claim.<br><br>
-
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
-
-
 
            <hr style="margin: 30px 0;">
 
-
-
-
-
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your claim</strong><br><br>
-              If you have any questions about your claim or you cannot make the claim date, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              <strong>If you have questions about your outcome</strong><br><br>
+              
+              If you have any questions about your outcome, call the RPA and follow the options for the Farming Transformation Fund scheme.
+              
+              
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
@@ -192,7 +170,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
             </div> 
   
            <br>
