--- a/app/views/ftf/eoi/v2-0/login.html
+++ b/app/views/ftf/eoi/v2-0/login.html
@@ -36,7 +36,7 @@
           <h1 class="govuk-label-wrapper">
             <label class="govuk-body">Customer reference number (CRN)</label>
           </h1>
-          <div id="event-name-hint" class="govuk-hint">The 10 digit number emailed to you when you registered with the Rural Payments service</div>
+          <div id="event-name-hint" class="govuk-hint">The 10 digit number emailed to you when you registered with the Rural Payments Service</div>
           <input class="govuk-input govuk-input--width-10" id="width-10" name="width10" type="text">
 
           <script>
@@ -56,7 +56,7 @@
         <h1 class="govuk-label-wrapper">
           <label class="govuk-body">Password</label>
         </h1>
-        <div id="event-name-hint" class="govuk-hint">This is your Rural Payments service password</div>
+        <div id="event-name-hint" class="govuk-hint">This is your Rural Payments Service password</div>
         <input class="govuk-input govuk-input--width-20" id="width-20" name="width20" type="text">
 
         <script>
@@ -104,7 +104,7 @@
             Monday to Friday, 8:30am to 5pm, except bank holidays<br>
             <a href="/_common/not-testing.html">Find out about call charges (opens in new tab)</a><br>
             <br>
-            <a href="/_common/not-testing.html">Register for the Rural Payments service</a> if you do not have an account.
+            <a href="/_common/not-testing.html">Register for the Rural Payments Service</a> if you do not have an account.
           </div>
         </details>
     
